// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TChampionshipPrize
message TChampionshipPrize
{	
	
	
	repeated ChampionshipPrizeDefine ChampionshipPrize = 1; // ChampionshipPrize

}

// Defined in table: ChampionshipPrize
message ChampionshipPrizeDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 PrizeId = 2; // 对应prize
	
	
	optional int32 Start = 3; // 最小排名
	
	
	optional int32 End = 4; // 最大排名
	
	
	optional int32 AwardId = 5; // 奖励id

}

