// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: MorePlayBase
message MorePlayBase
{	
	
	
	repeated MorePlayDefine MorePlay = 1; // MorePlay

}

// Defined in table: MorePlay
message MorePlayDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional string Name = 2; 
	
	
	optional int32 IsInHall = 3; 
	
	
	optional string Icon = 4; 
	
	
	optional string Des = 5; 
	
	
	repeated int32 StartTime = 6; 
	
	
	optional int32 DesId = 7; 
	
	
	repeated int32 EndTime = 8; 

}

