// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TexasRoomBase
message TexasRoomBase
{	
	
	
	repeated TexasRoomDefine TexasRoom = 1; // TexasRoom

}

// Defined in table: TexasRoom
message TexasRoomDefine
{	
	
	
	optional int32 Id = 1; // id(规则是类型*1000+顺序码)
	
	
	optional string Desc = 2; // 描述
	
	
	optional int32 Type = 3; // 房间类型
	
	
	optional int64 SBlind = 4; // 小盲
	
	
	optional int64 BBlind = 5; // 大盲
	
	
	optional int64 SBuyin = 6; // 最低买入
	
	
	optional int64 BBuyin = 7; // 最高买入
	
	
	optional int64 Tax = 8; // 每局抽水
	
	
	optional int32 Seat = 9; // 座位数
	
	
	optional int32 Pattern = 10; // 模式
	
	
	optional int32 Cd = 11; // 出牌CD（超时）
	
	
	optional int32 ClientCd = 12; // 客户端出牌CD
	
	
	optional int32 WaitingTime = 13; // 等待时间
	
	
	repeated int64 Ante = 14; // 前注（强制注）
	
	
	optional int32 Timeout = 15; // 超时次数
	
	
	optional int32 DelayPosTime = 16; // ？
	
	
	optional int32 Rbt = 17; // 一个房间最多机器人数量
	
	
	optional int32 KeepSeat = 18; // ？
	
	
	optional int32 Initrbt = 19; // ?

}

