// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: VipBase
message VipBase
{	
	
	
	repeated TVipDefine TVip = 1; // TVip

}

// Defined in table: TVip
message TVipDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional string Level = 2; // vip等级
	
	
	optional int32 Exp = 3; // vip经验
	
	
	optional int32 TotalExp = 4; // vip总经验
	
	
	optional string ExclusiveAchieve = 5; // 专属成就
	
	
	optional float ExpRate = 6; // 等级加速系数
	
	
	optional int32 FriendRank = 7; // 好友排名靠前
	
	
	optional int32 FriendLimit = 8; // 好友数量
	
	
	optional int32 CreateRoom = 9; // 创建私人房
	
	
	optional int32 UseSafe = 10; // 使用保险箱

}

