// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TChampionship
message TChampionship
{	
	
	
	repeated ChampionshipDefine Championship = 1; // Championship

}

// Defined in table: Championship
message ChampionshipDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional string Name = 2; // 名字
	
	
	optional int32 Type = 3; // 类型
	
	
	optional string Icon = 4; // 图标
	
	
	optional int32 SNum = 5; // 最小开局人数
	
	
	optional int32 BNum = 6; // 最大开局人数
	
	
	optional int64 SignCost = 7; // 报名费
	
	
	optional int64 ServeCost = 8; // 系统服务费
	
	
	optional int64 RebuyCost = 9; // rebuy花费金币
	
	
	optional int64 AddonCost = 10; // addon花费金币
	
	
	optional int32 TicketId = 11; // 门票id（道具id）
	
	
	optional int32 TimeId = 12; // 时间id（开启时间、频率）
	
	
	optional int32 DisplayTime = 13; // 赛事开始时间之前多久开始显示
	
	
	optional int32 SignTime = 14; // 距离比赛开始时间多久可以开启报名
	
	
	optional int32 DelaySign = 15; // 延迟报名时间
	
	
	optional int32 Rebuy = 16; // 可购买rebuy次数
	
	
	optional int32 Addon = 17; // 可购买addon次数
	
	
	optional int32 Prize = 18; // 结算奖励id
	
	
	optional int32 BlindType = 19; // 前注大小盲id
	
	
	optional int64 InitialChips = 20; // 初始筹码
	
	
	optional int32 RoomId = 21; // 房间id
	
	
	optional int32 WaitingTime = 22; // 开赛的准备时间
	
	
	optional int64 AddonChips = 23; // addon可获得筹码
	
	
	optional int32 MaxRebuyTimes = 24; // 每一回合最大可rebuy次数
	
	
	optional int32 Autoinit = 25; // 。

}

