// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TChampionshipBlind
message TChampionshipBlind
{	
	
	
	repeated ChampionshipBlindDefine ChampionshipBlind = 1; // ChampionshipBlind

}

// Defined in table: ChampionshipBlind
message ChampionshipBlindDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 BlindId = 2; // 对应blindtype
	
	
	optional int32 Level = 3; // 级别
	
	
	optional int64 SBlind = 4; // 小盲
	
	
	optional int64 BBlind = 5; // 大盲
	
	
	optional int64 PreBet = 6; // 前注
	
	
	optional int32 Addon = 7; // 能否addon
	
	
	optional int32 Rebuy = 8; // 能否rebuy
	
	
	optional int32 UpTime = 9; // 升注时间

}

